--- a/scala-2.11/index.html
+++ b/scala-2.11/index.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <a href='1.0.0'>1.0.0</a>
+<a href='1.0.0'>latest</a>
+<br>
+<a href='1.0.0'>1.0.0</a>
   </body>
 </html>
     
